@@ -344,6 +344,10 @@ if ( !$sendmail_args && $sendmail_path =~ /qmail-inject/ ) {
     $sendmail_args = '-i -t';
 }
 
+# Added in 1.4.11
+$smtp_sitewide_user = ''				if ( !$smtp_sitewide_user );
+$smtp_sitewide_pass = ''				if ( !$smtp_sitewide_pass );
+
 # Added in 1.4.9
 $abook_global_file_listing = 'true'     if ( !$abook_global_file_listing );
 $abook_file_line_length = 2048          if ( !$abook_file_line_length );
@@ -463,7 +467,7 @@ while ( ( $command ne "q" ) && ( $command ne "Q" ) ) {
             print "4.   SMTP Server           : $WHT$smtpServerAddress$NRM\n";
             print "5.   SMTP Port             : $WHT$smtpPort$NRM\n";
             print "6.   POP before SMTP       : $WHT$pop_before_smtp$NRM\n";
-            print "7.   SMTP Authentication   : $WHT$smtp_auth_mech$NRM\n";
+            print "7.   SMTP Authentication   : $WHT$smtp_auth_mech" . display_smtp_sitewide_userpass() . "$NRM\n";
             print "8.   Secure SMTP (TLS)     : $WHT$use_smtp_tls$NRM\n";
             print "9.   Header encryption key : $WHT$encode_header_key$NRM\n";
             print "\n";
@@ -1338,16 +1342,94 @@ sub command112b {
     chomp($inval);
     if ($inval =~ /^none\b/i) {
       # SMTP doesn't necessarily require logins
+      $smtp_sitewide_user = '';
+      $smtp_sitewide_pass = '';
       return "none";
     }
     if ( ($inval =~ /^cram-md5\b/i) || ($inval =~ /^digest-md5\b/i) || 
     ($inval =~ /^login\b/i)) {
+      command_smtp_sitewide_userpass($inval);
       return lc($inval);
+    } elsif (trim($inval) eq '') {
+      command_smtp_sitewide_userpass($smtp_auth_mech);
+      return $smtp_auth_mech;
     } else {
-      # user entered garbage, or default value so nothing needs to be set
+      # user entered garbage
       return $smtp_auth_mech;
     }
 }
+
+sub command_smtp_sitewide_userpass($) {
+    # get first function argument
+    my $auth_mech = shift(@_);
+    my $default, $tmp;
+    $auth_mech = lc(trim($auth_mech));
+    if ($auth_mech eq 'none') {
+        return;
+    }
+    print "SMTP authentication uses IMAP username and password by default.\n";
+    print "\n";
+    print "Would you like to use other login and password for all SquirrelMail \n";
+    print "SMTP connections?";
+    if ($smtp_sitewide_user ne '') {
+        $default = 'y';
+        print " [Yn]:";
+    } else {
+        $default = 'n';
+        print " [yN]:";
+    }
+    $tmp=<STDIN>;
+    $tmp = trim($tmp);
+    
+    if ($tmp eq '') {
+        $tmp = $default;
+    } else {
+        $tmp = lc($tmp);
+    }
+
+    if ($tmp eq 'n') {
+        $smtp_sitewide_user = '';
+        $smtp_sitewide_pass = '';
+    } elsif ($tmp eq 'y') {
+        print "Enter username [$smtp_sitewide_user]:";
+        my $new_user = <STDIN>;
+        $new_user = trim($new_user);
+        if ($new_user ne '') {
+            $smtp_sitewide_user = $new_user;
+        }
+        if ($smtp_sitewide_user ne '') {
+            print "If you don't enter any password, current sitewide password will be used.\n";
+            print "If you enter space, password will be set to empty string.\n";
+            print "Enter password:";
+            my $new_pass = <STDIN>;
+            if ($new_pass ne "\n") {
+                $smtp_sitewide_pass = trim($new_pass);
+            }
+        } else {
+            print "Invalid input. You must set username used for SMTP authentication.\n";
+            print "Click any key to continue\n";
+            $tmp = <STDIN>;
+        }
+    } else {
+        print "Invalid input\n";
+        print "Click any key to continue\n";
+        $tmp = <STDIN>;
+    }
+}
+
+# Sub adds information about SMTP authentication type to menu
+sub display_smtp_sitewide_userpass() {
+    my $ret = '';
+    if ($smtp_auth_mech ne 'none') {
+        if ($smtp_sitewide_user ne '') {
+            $ret = ' (with custom username and password)';
+        } else {
+            $ret = ' (with IMAP username and password)';
+        }
+    }
+    return $ret;
+}
+
 
 # TLS
 # This sub is reused for IMAP and SMTP
@@ -3319,6 +3401,8 @@ sub save_data {
     # string
         print CF "\$smtp_auth_mech = '$smtp_auth_mech';\n";
         print CF "\$imap_auth_mech = '$imap_auth_mech';\n";
+		print CF "\$smtp_sitewide_user = '" . quote_singe($smtp_sitewide_user) . "';\n";
+		print CF "\$smtp_sitewide_pass = '" . quote_singe($smtp_sitewide_pass) . "';\n";
     # boolean
         print CF "\$use_imap_tls = $use_imap_tls;\n";
         print CF "\$use_smtp_tls = $use_smtp_tls;\n";
@@ -3706,6 +3790,13 @@ sub clear_screen() {
     } else {
         system "clear";
     }
+}
+
+# Quotes safely strings containing single quote
+sub quote_single($) {
+	my $string = shift(@_);
+	$string =~ s/\'/\\'/g;
+	return $string;
 }
 
 # trims whitespace
